# joycaption-beta-one

./: pyproject.toml
finetuning/: train-accelerate.py
notebooks/: train_example.ipynb
src/finetuning/: train.py
src/joycaption_beta_one/finetuning/: convert_to_parquet.py  train_accelerate.py
src/joycaption_beta_one/gradio_app/: README.md  app.py
