[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joycaption_beta_one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "omegaconf>=2.3.0",
    "peft>=0.16.0",
    "pillow==11.2.1",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision>=0.22.0",
    "transformers==4.51.3",
    "triton==3.3.0",
    "wandb>=0.21.0",
    "click>=8.1.7",
    "jupyter>=1.1.1",
]

[project.scripts]
train-accelerate = "joycaption_beta_one.finetuning.train_accelerate:main"
