[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joycaption_beta_one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "omegaconf>=2.3.0",
    "peft>=0.16.0",
    "pillow",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers",
    "triton",
    "wandb>=0.21.0",
    "click>=8.1.7",
    "notebook",
    "ipykernel",
]

[project.scripts]
train-accelerate = "joycaption_beta_one.finetuning.train_accelerate:main"

[tool.hatch.build]
exclude = ["images/", "*.pt"]
